--- a/survey/survey.html
+++ b/survey/survey.html
@@ -10,6 +10,10 @@
      </header>
      <form> <!-- Add action to form (or add survey logging code) -->
      <!-- Add actual survey -->
+       <section>
+          <label> How big is your team? <br> </label>
+          <input type="number" name="team-size" min="1">
+       </section>
      </form>
   </body>
 </html>
