--- a/survey/survey.html
+++ b/survey/survey.html
@@ -3,6 +3,7 @@
   <head>
   <!-- Add Survey Logging Code -->
   <link rel="stylesheet" type="text/css" href="surveystyle.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Megrim">
   </head>
   <body>
      <header>
