--- a/survey/survey.html
+++ b/survey/survey.html
@@ -12,8 +12,8 @@
      <form> <!-- Add action to form (or add survey logging code) -->
      <!-- Add actual survey -->
        <section>
-          <label> How big is your team? <br> </label>
-          <input type="number" name="team-size" min="1">
+          <label aria-label="How big is your team?"> How big is your team? <br> </label>
+          <input aria-label="Team Size" type="number" name="team-size" min="1">
        </section>
      </form>
   </body>
