--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>NumberProto.js</title>
     <link rel="stylesheet" href="resources/stylesheets.css">
     <script src="resources/download.js"></script>
-  
+    <script data-content="warning">alert("This site is under construction. Please mind our appearance.")</script>
   </head>
   <body>
   
