--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   
     <header>
       <h1>NumberProto.js</h1>
-      </h2>Made by VFDan, StampDanFan, and NilsTheBest</h2>
+      <h2>Made by VFDan, StampDanFan, and NilsTheBest</h2>
     </header>
     <div class="content">
-      <h2>What is NumberProto.js?<h2>
+      <h2>What is NumberProto.js?</h2>
       <p>(UNDER CONSTRUCTION)</p>
     </div>
   
