--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>NumberProto.js</title>
     <link rel="stylesheet" href="resources/stylesheets.css">
     <script src="resources/download.js"></script>
-    <script data-content="warning">alert("This site is under construction. Please mind our appearance. This site is not complete.")</script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script data-content="warning">swal("This site is under construction. Please mind our appearance. This site is not complete.")</script>
   </head>
   <body>
   
