--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
     <header>
       <h1>NumberProto.js</h1>
-      <h2>Made by VFDan, StampDanFan, and NilsTheBest</h2>
+      <h2>Made by <a href="https://github.com/VFDan">VFDan</a> and <a href="https://github.com/NilsTheBest">NilsTheBest</a></h2>
     </header>
     <div class="content">
       <h2>What is NumberProto.js?</h2>
